hh/src/snapshots/hh__tests__gc_plain_renders_prune_and_vacuum.snap
---
source: hh/src/main.rs
expression: out
---
✓ Pruned 3 orphan blob file(s) · 1.5 MiB reclaimed · 2 stale row(s) removed
✓ Vacuumed the database (hh.db compacted on disk)
